--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
             color: #fff;
             display: none;
         }
+        a{
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
